--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.26.7",
     "crypto-js": "^4.2.0",
     "firebase": "^12.0.0",
+    "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
